Replace optionals with check framework nullability checking.